--- a/video.html
+++ b/video.html
@@ -59,26 +59,26 @@
             <ul class="slider-main__list swiper-wrapper">
                 <li class="slider-main__item swiper-slide">
                     <video class="slider-main__video" controls poster="video/trailer01.jpg">
-                        <sourse src="video/trailer01.webm" type="video/webm"
+                        <source src="video/trailer01.webm" type="video/webm"
                         <sourse src="video/trailer01.mp4" type="video/mp4"
                     </video>
                 </li>
                 <li class="slider-main__item swiper-slide">
                     <video class="slider-main__video" controls poster="video/trailer02.jpg">
-                        <sourse src="video/trailer02.webm" type="video/webm"
+                        <source src="video/trailer02.webm" type="video/webm"
                         <sourse src="video/trailer02.mp4" type="video/mp4"
                     </video>
                 </li>
                 <li class="slider-main__item swiper-slide">
                     <video class="slider-main__video" controls poster="video/trailer03.jpg">
-                        <sourse src="video/trailer03.webm" type="video/webm"
-                        <sourse src="video/trailer03.mp4" type="video/mp4"
+                        <source src="video/trailer03.webm" type="video/webm"
+                        <source src="video/trailer03.mp4" type="video/mp4"
                     </video>
                 </li>
                 <li class="slider-main__item swiper-slide">
                     <video class="slider-main__video" controls poster="video/tizer01.jpg">
-                        <sourse src="video/tizer01.webm" type="video/webm"
-                        <sourse src="video/tizer01.mp4" type="video/mp4"
+                        <source src="video/tizer01.webm" type="video/webm"
+                        <source src="video/tizer01.mp4" type="video/mp4"
                     </video>
                 </li>
                 <li class="slider-main__item swiper-slide">
