--- a/photo.html
+++ b/photo.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batman 2022</title>
 
+    <link rel="icon" href="img/Icon.png" type="image/png">
     <link rel="stylesheet" href="style/normalize.css">
     <link rel="stylesheet" href="style/swiper-bundle.min.css"/>
     <link rel="stylesheet" href="style/style.css">
